3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

More API changes.
 server/plugins.c
 plugins/cflogger/include/cflogger_proto.h: remove plugin_common functions.
 plugins/cfpython/cfpython_object.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2007-04-08

Have create_pathname() return buf to simplify code.
 common/map.c
 include/libproto.h
Nicolas Weeger 2007-04-08

Remove unused function.
 include/sproto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/cfpython/cfpython_object.c
 server/plugins.c
Nicolas Weeger 2007-04-08

Map-property type checking. Remove some unused void* return values.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2007-04-08

Change map plugin API to not use static vars. Remove old hooks (replaced by other means).
 include/plugin.h sproto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/cfpython/cfpython_map.c
 plugins/cfpython/cfpython.c
 plugins/cfnewspaper/cfnewspaper.c
 server/plugins.c
Nicolas Weeger 2007-04-08

 common/init.c: abort() if first map doesn't exist. Better than crashing later on.
Nicolas Weeger 2007-04-08

Fix bug #1695764: Charm monsters - shared experience broken.
Add new share_exp() function, working like change_exp() but party-aware.
 common/living.c
 include/libproto.h
 server/attack.c
 server/spell_attack.c
Nicolas Weeger 2007-04-07

Fix Doxygen stuff, no functional changes.
 types/clock/clock.c
 types/spell_effect/spell_effect.c
 types/exit/exit.c
Nicolas Weeger 2007-04-07

Enable polymorph spell. Will need tweaking, quite certainly.
 include/sproto.h