@@ -75,7 +75,6 @@ extern void         cf_fix_object(object* op);
 extern char*        cf_query_name(object* ob, char* name, int size);
 extern sstring      cf_query_name_pl( object* ob );
 extern char*        cf_query_base_name(object* ob, int plural, char* name, int size);
-extern object*      cf_insert_ob_in_ob( object* ob, object* where );
 extern const char*  cf_object_get_msg( object* );
 extern void         cf_object_set_weight( object* ob, int weight );
 extern int          cf_object_get_weight( object* ob );
@@ -87,14 +86,14 @@ extern int          cf_object_get_flag( object* ob, int flag );
 extern void         cf_object_set_flag( object* ob, int flag, int value );
 extern object*      cf_object_insert_in_ob( object* ob, object* where );
 extern void         cf_object_set_string_property(object* op, int propcode, const char* value);
-extern void         cf_object_activate_rune( object* op , object* victim);
+extern void         cf_spring_trap( object* op , object* victim);
 extern int          cf_object_check_trigger( object* op, object* cause );
-extern int          cf_object_query_money( object* op);
-extern int          cf_object_query_cost( object* op, object* who, int flags);
+extern int          cf_object_query_money(const object* op);
+extern int          cf_object_query_cost(const object *tmp, object *who, int flag);
 extern int          cf_object_cast_spell(object* caster, object* ctoo, int dir, object* sp, char* flags);
 extern void         cf_object_learn_spell(object* op, object* sp);
 extern void         cf_object_forget_spell(object* op, object* sp);
-extern object*      cf_object_check_for_spell(object* op, char* spellname);
+extern object*      cf_object_check_for_spell(object *op, const char *name);
 extern int          cf_object_cast_ability(object* caster, object* ctoo, int dir, object* sp, char* flags);
 extern int          cf_object_pay_amount(object* op, uint64 amount);
 extern int          cf_object_pay_item(object *op,object *pl);
@@ -140,7 +139,7 @@ extern object*      cf_map_get_object_at(mapstruct* m, int x, int y);
 extern object*      cf_map_insert_object(mapstruct* where, object* op, int x, int y);
 extern object*      cf_map_present_arch_by_name(const char* str, mapstruct* map, int nx, int ny);
 extern int          cf_map_get_flags(mapstruct *oldmap, mapstruct **newmap, sint16 x, sint16 y, sint16 *nx, sint16 *ny);
-extern object*      cf_map_insert_object_there(mapstruct* where, object* op, object* originator, int flags);
+extern object*      cf_map_insert_object_there(object *op, mapstruct *m, object *originator, int flag);
 extern int          cf_map_get_difficulty(mapstruct* map);
 extern int          cf_map_get_reset_time(mapstruct* map);
 extern int          cf_map_get_reset_timeout(mapstruct* map);
